# SimBench_EHV_HV_excerpt

./: .gitignore  AUTHORS  CHANGELOG.rst  CITATION.bib  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: github_test_action.yml  test_release.yml  upload_release.yml
SimBench_EHV_HV_excerpt/: SimBench_for_phd.py  __init__.py  data_overview.py  grid_parameters.py
SimBench_EHV_HV_excerpt/data/: net.json  profiles.h5  profiles_old.h5
SimBench_EHV_HV_excerpt/data/rest_of_the_year/: gen.p_mw.parquet  gen.vm_pu.parquet
SimBench_EHV_HV_excerpt/data/two_days/: gen.p_mw.parquet  gen.vm_pu.parquet  load.p_mw.parquet  load.q_mvar.parquet  sgen.p_mw.parquet
SimBench_EHV_HV_excerpt/test/: __init__.py  run_tests.py  test_SimBench_for_phd.py  test_parquet_profiles.py
SimBench_EHV_HV_excerpt/toolbox/: __init__.py  controller_functions.py  downcasting.py  grid_manipulation.py  h5_profiles.py  json_io.py  parquet_profiles.py  run_custom_timeseries.py  set_values_to_net.py
tests/: __init__.py  test_SimBench_EHV_HV_excerpt.py  test_h5_profiles.py
tutorials/: GettingStarted.ipynb  dummy.ipynb
